--- a/usr.bin/top/Makefile
+++ b/usr.bin/top/Makefile
@@ -1,8 +1,7 @@
 # $FreeBSD: src/usr.bin/top/Makefile,v 1.5.6.2 2002/08/11 17:09:54 dwmalone Exp $
 PROG=	top
 
-CFLAGS+= -DHAVE_GETOPT -DHAVE_STRERROR -I${.CURDIR} -I${.OBJDIR} \
-		 -I. -DORDER
+CFLAGS+= -DORDER -I${.CURDIR}
 
 .if ${MACHINE_ARCH} == "x86_64"
 CFLAGS+=-D_ENABLEX64
@@ -20,6 +19,6 @@ LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 BINGRP= kmem
 BINMODE=2555
 
-WARNS?= 1
+WARNS?= 2
 
 .include <bsd.prog.mk>
