mandoc(1): Further adjustments.
* Add some libraries we reference with .Lb.

* Add mandoc(1)'s makewhatis.8 to the yet unused manual pages.

--- a/contrib/mdocml/lib.in
+++ b/contrib/mdocml/lib.in
@@ -54,6 +54,7 @@ LINE("libdm",		"Device Mapper Library (libdm, \\-ldm)")
 LINE("libdwarf",	"DWARF Access Library (libdwarf, \\-ldwarf)")
 LINE("libedit",		"Command Line Editor Library (libedit, \\-ledit)")
 LINE("libefi",		"EFI Runtime Services Library (libefi, \\-lefi)")
+LINE("libefivar",	"EFI Runtime Services Library (libefivar, \\-lefivar)")
 LINE("libelf",		"ELF Access Library (libelf, \\-lelf)")
 LINE("libevent",	"Event Notification Library (libevent, \\-levent)")
 LINE("libexecinfo",	"Backtrace Information Library (libexecinfo, \\-lexecinfo)")
@@ -72,6 +73,7 @@ LINE("libisns",		"Internet Storage Name Service Library (libisns, \\-lisns)")
 LINE("libjail",		"Jail Library (libjail, \\-ljail)")
 LINE("libkcore",	"Kernel Memory Core Access Library (libkcore, \\-lkcore)")
 LINE("libkiconv",	"Kernel-side iconv Library (libkiconv, \\-lkiconv)")
+LINE("libkinfo",	"Kernel Information Access Library (libkinfo, \\-lkinfo)")
 LINE("libkse",		"N:M Threading Library (libkse, \\-lkse)")
 LINE("libkvm",		"Kernel Data Access Library (libkvm, \\-lkvm)")
 LINE("libm",		"Math Library (libm, \\-lm)")
@@ -128,6 +130,7 @@ LINE("libthr",		"1:1 Threading Library (libthr, \\-lthr)")
 LINE("libufs",		"UFS File System Access Library (libufs, \\-lufs)")
 LINE("libugidfw",	"File System Firewall Interface Library (libugidfw, \\-lugidfw)")
 LINE("libulog",		"User Login Record Library (libulog, \\-lulog)")
+LINE("libusb",		"USB access library (libusb, \\-lusb)")
 LINE("libusbhid",	"USB Human Interface Devices Library (libusbhid, \\-lusbhid)")
 LINE("libutil",		"System Utilities Library (libutil, \\-lutil)")
 LINE("libvgl",		"Video Graphics Library (libvgl, \\-lvgl)")
