--- a/usr.bin/mandoc/Makefile
+++ b/usr.bin/mandoc/Makefile
@@ -2,7 +2,7 @@
 
 PROG=	mandoc
 MAN=	mandoc.1 mandoc_char.7
-#MAN+=	apropos.1 mandoc.db.5 eqn.7 man.7 mdoc.7 roff.7 tbl.7
+#MAN+=	apropos.1 mandoc.db.5 eqn.7 man.7 mdoc.7 roff.7 tbl.7 makewhatis.8
 WARNS?=	3
 
 CFLAGS+=-I${.CURDIR}
