--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3501,6 +3501,7 @@ TO_REMOVE+=/usr/share/man/man9/putter.9.gz
 TO_REMOVE+=/usr/include/sys/semaphore.h
 TO_REMOVE+=/usr/share/man/man2/brk.2.gz
 TO_REMOVE+=/usr/share/man/man1/ld-elf.so.1.1.gz
+TO_REMOVE+=/usr/share/misc/man.template
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
