Add <alloca.h> header.
There are quite a few ports that often assume <alloca.h> availability.
This addition should ease up porting efforts. It is reasonable to try
including different header than <stdlib.h> for alloca() definition:
 * alloca() is not implemented in libc (it is implemented by compiler);
 * <stdlib.h> will not provide alloca() macro for !__BSD_VISIBLE case;
 * including <stdlib.h> might bring in additional unwanted namespace
   pollution when implementing certain low-level features.

--- a/include/Makefile
+++ b/include/Makefile
@@ -8,7 +8,7 @@
 
 CLEANFILES= osreldate.h version vers.c vers.txt
 SUBDIR= arpa protocols rpc rpcsvc xlocale
-INCS=	a.out.h ar.h assert.h bitstring.h cpio.h ctype.h db.h \
+INCS=	a.out.h alloca.h ar.h assert.h bitstring.h cpio.h ctype.h db.h \
 	dirent.h disktab.h \
 	dlfcn.h elf.h elf-hints.h err.h float.h fmtmsg.h fnmatch.h fstab.h \
 	fts.h ftw.h getopt.h glob.h grp.h \
