libc/stdlib: Refactor aligned_alloc().
  * Lift the restriction from posix_memalign() that alignment should be
    more or equal to sizeof(void *).
  * Make aligned_alloc() a weak symbol.
  * Adjust the manpage.

--- a/lib/libc/stdlib/Makefile.inc
+++ b/lib/libc/stdlib/Makefile.inc
@@ -6,7 +6,7 @@
 
 CMAPS+=	${.CURDIR}/stdlib/Symbol.map
 
-MISRCS+=a64l.c abort.c abs.c atexit.c aligned_alloc.c \
+MISRCS+=a64l.c abort.c abs.c atexit.c \
 	atof.c atoi.c atol.c atoll.c \
 	bsearch.c cxa_thread_atexit_impl.c \
 	div.c exit.c getenv.c getopt.c getopt_long.c \
