--- a/lib/libstand/Makefile
+++ b/lib/libstand/Makefile
@@ -113,7 +113,7 @@ SRCS+=	arp.c ether.c inet_ntoa.c in_cksum.c net.c udp.c netif.c rpc.c
 SRCS+=	bootp.c rarp.c bootparam.c
 
 # boot filesystems
-SRCS+=	ufs.c nfs.c cd9660.c tftp.c zipfs.c bzipfs.c gzipfs.c
+SRCS+=	ufs.c nfs.c cd9660.c tftp.c bzipfs.c gzipfs.c
 SRCS+=	netif.c nfs.c
 SRCS+=	dosfs.c ext2fs.c
 SRCS+=	splitfs.c
