rtquery(8): Fix MD5 prototypes.
Do not use local MD5 prototypes.
The libcrypto is not needed, rtquery(8) is static.

Caught-by: LTO

--- a/sbin/routed/rtquery/Makefile
+++ b/sbin/routed/rtquery/Makefile
@@ -6,5 +6,6 @@ MAN=	rtquery.8
 LDADD+=	-lmd
 DPADD+=	${LIBMD}
 NO_WARRAY_BOUNDS=
+CFLAGS+=	-I${.CURDIR}/../../../crypto/libressl/include
 
 .include <bsd.prog.mk>
