--- a/sbin/hammer/Makefile
+++ b/sbin/hammer/Makefile
@@ -10,6 +10,7 @@ SRCS=	hammer.c ondisk.c blockmap.c cache.c misc.c cycle.c uuid.c \
 MAN=	hammer.8
 
 CFLAGS+= -I${.CURDIR}/../../sys
+CFLAGS+= -I${.CURDIR}/../../crypto/libressl/include
 LDADD=	-lm -lutil -lhammer -lprivate_crypto
 DPADD=	${LIBM} ${LIBUTIL} ${LIBHAMMER} ${LIBCRYPTO}
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
