--- a/usr.bin/nc/Makefile
+++ b/usr.bin/nc/Makefile
@@ -1,3 +1,4 @@
+# This version of nc(1) is from LibreSSL
 .PATH: ${.CURDIR}/../../crypto/libressl/apps/nc
 .PATH: ${.CURDIR}/../../crypto/libressl/tls
 
@@ -5,10 +6,13 @@ PROG=	nc
 SRCS=	netcat.c atomicio.c socks.c
 
 # TLS block (no separate libtls.a)
-SRCS+=	tls_client.c	\
+SRCS+=	tls_bio_cb.c	\
+	tls_client.c	\
 	tls_config.c	\
 	tls_conninfo.c	\
+	tls_keypair.c	\
 	tls_peer.c	\
+	tls_ocsp.c	\
 	tls_server.c	\
 	tls_util.c	\
 	tls_verify.c	\
@@ -16,9 +20,8 @@ SRCS+=	tls_client.c	\
 
 WARNS?=	2
 
-CFLAGS+=-DHAVE_ARC4RANDOM_BUF -DHAVE_STRTONUM	\
-	-I${.CURDIR}/../../crypto/libressl/include		\
-	-I${.CURDIR}/../../crypto/libressl/include/compat
+CFLAGS+= -DLIBRESSL_INTERNAL -D__BEGIN_HIDDEN_DECLS= -D__END_HIDDEN_DECLS=
+CFLAGS+=-I${.CURDIR}/../../crypto/libressl/include
 
 DPADD=	${LIBCRYPTO} ${LIBSSL}
 LDADD=	-lprivate_ssl -lprivate_crypto
